--- a/composite_webview/build.gradle
+++ b/composite_webview/build.gradle
@@ -1,21 +1,22 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 26
+
+
+
     defaultConfig {
-        applicationId "com.mufcryan.android_demo"
+        applicationId "com.mufcryan.composite_webview"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -23,19 +24,15 @@ android {
         }
     }
 
-    dataBinding.enabled = true
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    kapt "com.android.databinding:compiler:3.0.0-beta1"
-    implementation "android.arch.lifecycle:runtime:1.0.0-alpha9"
-    implementation "android.arch.lifecycle:extensions:1.0.0-alpha9"
-    kapt "android.arch.lifecycle:compiler:1.0.0-alpha9"
+    compile 'org.sufficientlysecure:html-textview:3.5'
 }
