--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    kapt "com.android.databinding:compiler:3.0.0-beta1"
-    implementation "android.arch.lifecycle:runtime:1.0.0-alpha9"
-    implementation "android.arch.lifecycle:extensions:1.0.0-alpha9"
-    kapt "android.arch.lifecycle:compiler:1.0.0-alpha9"
+    kapt "com.android.databinding:compiler:3.1.0-alpha05"
+    implementation "android.arch.lifecycle:runtime:1.0.3"
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    kapt "android.arch.lifecycle:compiler:1.0.0"
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
