--- a/audio_video/build.gradle
+++ b/audio_video/build.gradle
@@ -36,14 +36,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // required, enough for most devices.
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.0'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.6.0'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.0'
 
     // Other ABIs: optional
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.6.1'
-    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.4.5.1'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.6.1'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv5:0.6.1'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-arm64:0.4.5.1'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.6.1'
 
     // ExoPlayer as IMediaPlayer: optional, experimental
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.4.5.1'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.4.5.1'
 }
