--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,15 @@
 buildscript {
     apply from: file('version.gradle')
 
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.5.21'
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.1'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21'
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
         classpath "com.hujiang.aspectjx:gradle-android-plugin-aspectjx:${versions.aspectjx}"
         classpath "com.qihoo360.argusapm:argus-apm-gradle-asm:${versions.argusapm}"
 
@@ -23,6 +24,16 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        maven {
+            url 'https://developer.huawei.com/repo/'
+            content {
+                // this repository *only* contains artifacts with group "my.company"
+                includeGroup "com.huawei.hmf"
+                includeGroup "com.huawei.android.hms"
+            }
+        }
+        maven { url 'https://repo.huaweicloud.com/repository/maven/' }
     }
 }
 
